--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 # Logs
 logs
+UCToken/logs
 *.log
 npm-debug.log*
 yarn-debug.log*
@@ -31,6 +32,7 @@ bower_components
 
 # Compiled binary addons (https://nodejs.org/api/addons.html)
 build/Release
+UCToken/build
 
 # Dependency directories
 node_modules/
